// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider Component should render with style 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#BCBBC1",
        "height": 0.5,
      },
      Object {
        "backgroundColor": "blue",
      },
    ]
  }
/>
`;

exports[`Divider Component should render without issues 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#BCBBC1",
        "height": 0.5,
      },
      undefined,
    ]
  }
/>
`;
